# OpenGL

./: CMakeLists.txt  OpenGL2.sln  README.md
OpenGL2/: OpenGL2.vcxproj  OpenGL2.vcxproj.filters
OpenGL2/Shaders/: FragmentShader.frag  FragmentShader.txt  VertexShader.txt  VertexShader.vert
OpenGL2/assets/Other/: 44705K288_Low-Pressure Aluminum Pipe Fitting.SLDPRT  53785K46_Low-Pressure Aluminum Pipe Fitting.SLDPRT  60355K124_Ball Bearing.SLDPRT
OpenGL2/src/: Object.cpp  Object.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  item.cpp  item.h  main.cpp  renderer.cpp  renderer.h
